@@ -1,5 +1,6 @@
 ver 0.4.2
 - Changed the json formats for "choice" and "check_array"
+- Added command-line utils to embed json into exe.
 - Fixed a bug that help menu will be shown even if the length of ["help"] is 0.
 
 ver 0.4.1
